--- a/.environ
+++ b/.environ
@@ -3,9 +3,9 @@
 export PORT=8082
 ## DATABASE CONFIGURATIONS
 export DB_HOST_ADDRESS=localhost
-export DATABASE_NAME=teletruckDEV
-export DB_USERNAME=teletruck
-export DB_PASSWORD=teletruck
+export DATABASE_NAME=databaseName
+export DB_USERNAME=username
+export DB_PASSWORD=password
 export DB_PORT=5432
 export DB_NAME=testdb
 
